add java processing operations
